layout, main less files

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -14,10 +14,9 @@
     </head>
     <body>
         <div id="app"></div>
-
-        //= templates/header.html
-        //= templates/menu.html
         
-        <script data-main="js/app" src="js/libs/require.js"></script>
+        //= templates/main.html
+        
+        <script data-main="js/boot" src="js/libs/require.js"></script>
     </body>
 </html>
