divided view files, add overlay

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -15,7 +15,8 @@
     <body>
         <div id="app"></div>
         
-        //= templates/main.html
+        //= templates/header.html
+        //= templates/content.html
         
         <script data-main="js/boot" src="js/libs/require.js"></script>
     </body>
