libs concatination, list_item template, city model and cities collection

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -23,7 +23,8 @@
         
         //= templates/header.html
         //= templates/content.html
+        //= templates/list_link.html
         
-        <script data-main="js/boot" src="js/libs/require.js"></script>
+        <script data-main="js/boot" src="js/require.js"></script>
     </body>
 </html>
