--- a/src/html/index.html
+++ b/src/html/index.html
@@ -21,9 +21,10 @@
     <body>
         <div id="app"></div>
         
-        //= templates/header.html
-        //= templates/content.html
+        //= templates/main.html
+        //= templates/list.html
         //= templates/list_link.html
+        //= templates/city.html
         
         <script data-main="js/boot" src="js/require.js"></script>
     </body>
