get data for forecast

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -25,6 +25,7 @@
         //= templates/list.html
         //= templates/list_link.html
         //= templates/city.html
+        //= templates/forecast.html
         
         <script data-main="js/boot" src="js/require.js"></script>
     </body>
