error handlers, new icons

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -26,6 +26,7 @@
         //= templates/list_link.html
         //= templates/city.html
         //= templates/block.html
+        //= templates/alert.html
         //= templates/forecast.html
         
         <script data-main="js/boot" src="js/require.js"></script>
